<resources>
    <string name="app_name">mvvm</string>
    <string name="add_country">Add Country</string>
    <string name="gold_medals">Gold Medals</string>
    <string name="country_name">Country Name</string>
    <string name="gold_medal">Gold Medal</string>
    <string name="silver_medals">Silver Medals</string>
    <string name="bronze_medals">Bronze Medals</string>
    <string name="save">Save</string>
    <string name="textview">TextView</string>
</resources>
